# rag-observatory

./: Dockerfile  Makefile  README.md  access.md  answering.py  api.py  chunking.py  cli.py  config.py  docker-compose.yml  embeddings.py  evals.py  golden.jsonl  ingest.py  passwords.md  pipeline.py  pyproject.toml  rag.example.yaml  rerank.py  run_api.sh  schemas.py  test_chunking.py  test_embeddings.py  test_vectorstore.py  tracing.py  types.py  util.py  vectorstore.py
rag-observatory/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
rag-observatory/configs/: config.example.yaml
rag-observatory/docs/: architecture.md  reporting.md  trace_schema.md
rag-observatory/docs/knowledge_base/: 000_rag_basics.md  001_chunking.md  002_eval_loop.md  003_latency_budget.md
rag-observatory/evals/: harness.py
rag-observatory/evals/datasets/: smoke.jsonl
rag-observatory/examples/: run_demo.sh
rag-observatory/src/rag_observatory/: __init__.py  cli.py  demo_pipeline.py  metrics.py  report.py  schema.py  tracing.py
rag-observatory/tests/: test_metrics.py  test_schema_validation.py  test_tracing_write.py
